refactor: Refactor ReceiptPaymentDto class